# Nath-pdf-reader

./: .gitignore  NathFileReader.spec  README.md  create_icon.py  create_installer.bat  create_test_pdf.py  main.py  modern_viewer.py  pyproject.toml  requirements.txt  setup.iss  setup.py  viewer_settings.json
scripts/: build.bat
src/nathreader/: __init__.py  __main__.py  app.py
src/nathreader/core/: document.py
src/nathreader/ui/: main_window.py  settings_dialog.py  simple_viewer.py  statusbar.py  theme.py  toolbar.py
src/nathreader/utils/: file_utils.py  settings.py
tests/: test_document.py
